--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,15 +1,20 @@
 .gallery{
     display: flex;
     flex-wrap: wrap;
+    gap: 24px;
+    padding-top: 24px;
 }
 
 
-.gallery-item{}
+.gallery-item{
+    width: calc((100% - 24px * 2) / 3);
+    height: auto;
+}
 
 .gallery-link{}
 
 
 .gallery-image{
     display: block;
-    width: 24px;
+    width: 100%;
 }
